versao final2 pica das galaxias thx nathi

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container1">
         <div class="box" onclick="selecionadorPrato(this);">
             <img src="img/frango.png" >
-            <p>nome</p>
+            <p>Franga</p>
             <p class="descrição">descrição</p>
             <p>11</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -36,7 +36,7 @@
         </div>
         <div class="box"  onclick="selecionadorPrato(this)">
             <img src="img/frango.png" >
-            <p>nome</p>
+            <p>Frangolita</p>
             <p class="descrição">descrição</p>
             <p>12</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -44,7 +44,7 @@
         </div>
         <div class="box" onclick="selecionadorPrato(this)">
             <img src="img/frango.png" >
-            <p>nome</p>
+            <p>Frangada</p>
             <p class="descrição">descrição</p>
             <p>13</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -56,7 +56,7 @@
     <div class="container2">
         <div class="box" onclick="selecionadorBebida(this)">
             <img src="img/coca.png" >
-            <p>nome</p>
+            <p>Cokita</p>
             <p class="descrição">descrição</p>
             <p>3</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -64,7 +64,7 @@
         </div>
         <div class="box" onclick="selecionadorBebida(this)">
             <img src="img/coca.png" >
-            <p>nome</p>
+            <p>Coka Zero</p>
             <p class="descrição">descrição</p>
             <p>4</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -72,7 +72,7 @@
         </div>
         <div class="box" onclick="selecionadorBebida(this)">
             <img src="img/coca.png" >
-            <p>nome</p>
+            <p>Coka Verde</p>
             <p class="descrição">descrição</p>
             <p>5</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -84,7 +84,7 @@
     <div class="container3">
         <div class="box" onclick="selecionadorSobremesa(this)">
             <img src="img/pudim.png" >
-            <p class="">nome</p>
+            <p class="">Pudao</p>
             <p class="descrição">descrição</p>
             <p>6</p>
             <ion-icon name="checkmark-outline"></ion-icon>
@@ -92,14 +92,14 @@
         </div>
         <div class="box" onclick="selecionadorSobremesa(this)">
             <img src="img/pudim.png" >
-            <p>nome</p>
+            <p>pudim de Coco</p>
             <p class="descrição">descrição</p>
             <p>7</p>
             <ion-icon name="checkmark-outline"></ion-icon>
         </div>
         <div class="box" onclick="selecionadorSobremesa(this)">
             <img src="img/pudim.png" >
-            <p>nome</p>
+            <p>pudim de Pão</p>
             <p class="descrição">descrição</p>
             <p>8</p>
             <ion-icon name="checkmark-outline"></ion-icon>
